# sglang

.github/workflows/: pr-test-xpu.yml
docker/: Dockerfile.xpu
python/moe-cpu-engine/: .gitattributes  .gitignore  README.md  example.py  validate.py
python/moe-cpu-engine/ext/: cpuinfer.h  engine_bindings.cpp  engine_config.h  moe.cpp  moe.h  moe_offload_config.py  numa_launcher.cpp  numa_launcher.h  numa_tasks.h  setup.py  task_queue.cpp  task_queue.h  worker_entry.cpp
python/moe-cpu-engine/ext/utils/: communicator.cpp  communicator.h  numa_detector.cpp  numa_detector.h  shm_ccl.cpp  shm_ccl.h
python/sglang/: bench_one_batch.py
python/sglang/srt/: custom_op.py  operations_strategy.py  server_args.py  two_batch_overlap.py  utils.py
python/sglang/srt/layers/: activation.py  layernorm.py  linear.py  logits_processor.py  rotary_embedding.py  vocab_parallel_embedding.py
python/sglang/srt/layers/attention/: intel_amx_backend.py  tbo_backend.py  triton_backend.py
python/sglang/srt/layers/moe/: topk.py
python/sglang/srt/layers/moe/ep_moe/: layer.py
python/sglang/srt/layers/moe/fused_moe_triton/: fused_moe.py  layer.py
python/sglang/srt/layers/quantization/: deep_gemm.py  fp8.py
python/sglang/srt/managers/: schedule_batch.py  scheduler.py
python/sglang/srt/managers/multimodal_processors/: base_processor.py
python/sglang/srt/mem_cache/: memory_pool.py
python/sglang/srt/model_executor/: cuda_graph_runner.py  model_runner.py
python/sglang/srt/model_loader/: loader.py
python/sglang/srt/models/: deepseek_v2.py
python/sglang/test/: test_utils.py
sgl-kernel/: pyproject.toml  pyproject_sycl.toml  setup.py  setup_sycl.py
sgl-kernel-esimd/: README.md  esimd_build_extention.py  pyproject_sycl.toml  setup_sycl.py
sgl-kernel-esimd/csrc/xpu/: torch_extension_sycl.cc  torch_extension_sycl_lgrf.cc  uni_esimd_kernel.sycl  uni_esimd_kernel_lgrf.sycl
sgl-kernel-esimd/csrc/xpu/esimd_kernels/: esimd_add.h  fp16_GEMV.h  fp8_GEMV.h  rmsNorm.h  rotary_pos_emb.h  sdpa_gemm.h  sdpa_norm.h  utils.h
sgl-kernel-esimd/include/: sgl_kernel_ops.h
sgl-kernel-esimd/python/sgl_kernel_esimd/: __init__.py  esimd_ops.py  gemm.py
sgl-kernel-esimd/tests/: test_awq_dequant.py  test_esimd_add.py  test_esimd_uni_gemm.py  test_esimd_uni_lgrf_prefill.py  test_esimd_uni_mla.py  utils_gemm.py
sgl-kernel/csrc/xpu/: CMakeLists.txt  awq_dequantize.cpp
sgl-kernel/csrc/xpu/cmake/: BuildFlags.cmake
sgl-kernel/csrc/xpu/src/: BuildOnLinux.cmake
